fix: заменить overflow hidden на max-width в элементах блока profile

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,6 +7,12 @@
     max-width: 100%;
 }
 
+@media screen and (min-width: 768px) {
+    .profile__info {
+        max-width: calc(100% - 300px);
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .profile__info {
         gap: 16px;
