--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,13 +3,13 @@
     flex-direction: column;
     align-items: center;
     padding: 42px 0 36px;
-    overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
     .profile {
         flex-direction: row;
         gap: 30px;
+        justify-content: space-between;
     }
 }
 
